--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-select": "^4.0.2",
-    "react-useportal": "^1.0.13"
+    "react-useportal": "^1.0.13",
+    "web3": "^1.3.3",
+    "web3-react": "^5.0.5"
   }
 }
